unpackaged/main/default/objects/Contact/fields/AI_Contact_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Contact_Summary__c</fullName>
    <label>AI Contact Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>