unpackaged/main/default/objects/Contact/fields/Candidate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Notes__c</fullName>
    <label>Candidate Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>