unpackaged/main/default/objects/Contact/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <label>Candidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>