unpackaged/main/default/objects/Contact/fields/Contact_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Referral_Source__c</fullName>
    <label>Contact Referral Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>