unpackaged/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
                <isActive>false</isActive>
                <label>Broker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>