unpackaged/main/default/objects/Contact/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_(Internal)_Current_Date</label>
    <type>Date</type>
</CustomField>