unpackaged/main/default/objects/Contact/fields/Deal_Quality__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quality__c</fullName>
    <description>DO NOT USE</description>
    <label>Z_(Internal)_ADQS</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>