unpackaged/main/default/objects/Contact/fields/Deals_Shown__c.field-meta.xml
<CustomField>
    <fullName>Deals_Shown__c</fullName>
    <description>DO NOT USE</description>
    <label>Z_(Internal)_TDS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>