unpackaged/main/default/objects/Contact/fields/Last_Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Point__c</fullName>
    <label>Last Touchpoint</label>
    <type>Date</type>
</CustomField>