unpackaged/main/default/objects/Contact/fields/Mobile_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_2__c</fullName>
    <label>Mobile Phone 2</label>
    <type>Phone</type>
</CustomField>