unpackaged/main/default/objects/Contact/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Location(Delete)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office_Location__c.Organization_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Office_Location__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>