unpackaged/main/default/objects/Contact/fields/Potential_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Potential_Candidate__c</fullName>
    <label>Potential Candidate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>