unpackaged/main/default/objects/Contact/fields/Relationship_Owners__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Owners__c</fullName>
    <label>Relationship Owners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relationship Owner 1</fullName>
            </value>
            <value>
                <fullName>Relationship Owner 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>