unpackaged/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</description>
    <inlineHelpText>Note for Admin- Please do not change these picklist values, since it may impact certain features of Navatar Deal Connect.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Navatar Deal Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>