unpackaged/main/default/objects/Contact/fields/Spouse_Partner_s_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Partner_s_Birthday__c</fullName>
    <label>Spouse/Partner&#39;s Birthday</label>
    <type>Date</type>
</CustomField>