unpackaged/main/default/objects/Contact/fields/Spouse_Partner_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Partner_s_Name__c</fullName>
    <label>Spouse/Partner&#39;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>