unpackaged/main/default/objects/Contact/listViews/Key_Intermediaries.listView-meta.xml
<ListView>
    <fullName>Key_Intermediaries</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>forTotalDealsShown__c</columns>
    <columns>forAverageDealQualityScore__c</columns>
    <columns>Tier__c</columns>
    <columns>Industry_Focus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>forTotalDealsShown__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Banker</value>
    </filters>
    <label>Key Intermediaries</label>
</ListView>