unpackaged/main/default/objects/Contact/listViews/TestView.listView-meta.xml
<ListView>
    <fullName>TestView</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>startsWith</operation>
    </filters>
    <label>TestView</label>
    <language>en_US</language>
</ListView>