unpackaged/main/default/objects/Contact/listViews/Tier_1_Intermediaries_to_Call.listView-meta.xml
<ListView>
    <fullName>Tier_1_Intermediaries_to_Call</fullName>
    <columns>FULL_NAME</columns>
    <columns>forTotalDealsShown__c</columns>
    <columns>forAverageDealQualityScore__c</columns>
    <columns>Industry_Focus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tier__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Banker</value>
    </filters>
    <label>Tier 1 Intermediaries to Call</label>
</ListView>