unpackaged/main/default/objects/Contact/listViews/Top_Bankers.listView-meta.xml
<ListView>
    <fullName>Top_Bankers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>forTotalDealsShown__c</columns>
    <columns>forAverageDealQualityScore__c</columns>
    <columns>Industry_Focus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tier__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Banker</value>
    </filters>
    <label>Top Bankers</label>
</ListView>